Added Media files and filled page with content

--- a/index.html
+++ b/index.html
@@ -6,5 +6,30 @@
         <link rel="stylesheet" href="./resources/css/style.css" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <section id="phonevideo">
+            <h1>Discover hidden places in the world around you</h1>
+            <a
+                href="https://160981731045460382de83b5eaf66940.cc-propeller.cloud/?allowEmbedForCodecademy=false&allowCopyAndPasteForCodecademy=true&allowFileUploadForCodecademy=true&allowFileDownloadForCodecademy=true&allowExternalLinkForCodecademy=true&allowAICodeExplainForCodecademy=true&allowAIChatAssistantForCodecademy=true&allowAIErrorExplainForCodecademy=true#"
+                >Download Excursion (Coming soon!)</a
+            >
+            <video
+                src="./resources/media/Excursion Codecademy.mp4"
+                autoplay
+            ></video>
+        </section>
+        <section id="campimage">
+            <h1>Head</h1>
+            <h4>Sub</h4>
+            <img src="./resources/media/Camp Bild.webp" alt="" />
+        </section>
+        <section id="phoneicon">
+            <img src="./resources/media/Phone 64x108.webp" alt="" />
+            <h1>Coming Soon for iPhone and Android</h1>
+            <a
+                href="https://160981731045460382de83b5eaf66940.cc-propeller.cloud/?allowEmbedForCodecademy=false&allowCopyAndPasteForCodecademy=true&allowFileUploadForCodecademy=true&allowFileDownloadForCodecademy=true&allowExternalLinkForCodecademy=true&allowAICodeExplainForCodecademy=true&allowAIChatAssistantForCodecademy=true&allowAIErrorExplainForCodecademy=true#"
+                >Download Excursion (Coming soon!)</a
+            >
+        </section>
+    </body>
 </html>
