--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
             ></video>
         </section>
         <section id="campimage">
-            <h1>Head</h1>
-            <h4>Sub</h4>
+            <h1>Your personal travel guide</h1>
+            <h4>
+                Excursion remembers places you like, and recommends new points
+                of interest around you.
+            </h4>
             <img src="./resources/media/Camp Bild.webp" alt="" />
         </section>
         <section id="phoneicon">
